--- a/style.css
+++ b/style.css
@@ -34,11 +34,6 @@ a {
     height: 450px;
 }
 
-/* .image-container {
-    flex: 2 1 20rem;
-    
-} */
-
 img {
     border-radius: 1.5rem;
     width: 100%;
@@ -66,6 +61,6 @@ p {
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
