--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
     font-family: 'Outfit', sans-serif;
     background: hsl(212, 45%, 89%);
     line-height: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 a {
@@ -20,18 +25,16 @@ a {
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 2rem 0;
     background: white;
     border-radius: 1.5rem;
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 2rem;
-    width: 300px;
-    height: 450px;
+    width: 30rem;
+    height: 45rem;
+    flex: 2;
 }
 
 img {
@@ -58,9 +61,10 @@ p {
 }
 
 .attribution {
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     text-align: center;
+    flex: 1;
 }
